--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.82.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seeebiii/ses-verify-identities"
+  },
   "scripts": {
     "build": "tsc",
     "lint": "eslint . --ext .ts",
