--- a/package.json
+++ b/package.json
@@ -18,34 +18,36 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.82.0",
+    "@aws-cdk/assert": "^1.83.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "14.14.20",
+    "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.4.2",
-    "prettier": "2.2.1",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.2.0",
-    "typescript": "~4.1.3"
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "1.82.0",
-    "@aws-cdk/aws-route53": "1.82.0",
-    "@aws-cdk/aws-sns": "1.82.0",
-    "@aws-cdk/core": "1.82.0",
-    "@aws-cdk/custom-resources": "1.82.0"
+    "@aws-cdk/aws-iam": "^1.83.0",
+    "@aws-cdk/aws-route53": "^1.83.0",
+    "@aws-cdk/aws-sns": "^1.83.0",
+    "@aws-cdk/core": "^1.83.0",
+    "@aws-cdk/custom-resources": "^1.83.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "1.82.0",
-    "@aws-cdk/aws-route53": "1.82.0",
-    "@aws-cdk/aws-sns": "1.82.0",
-    "@aws-cdk/core": "1.82.0",
-    "@aws-cdk/custom-resources": "1.82.0"
+    "@aws-cdk/aws-iam": "^1.83.0",
+    "@aws-cdk/aws-route53": "^1.83.0",
+    "@aws-cdk/aws-sns": "^1.83.0",
+    "@aws-cdk/core": "^1.83.0",
+    "@aws-cdk/custom-resources": "^1.83.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js"]
+    "moduleFileExtensions": [
+      "js"
+    ]
   }
 }
