--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.83.0",
+    "@aws-cdk/assert": "1.84.0",
     "@types/jest": "^26.0.10",
     "@types/node": "^14.14.20",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -42,18 +42,18 @@
     "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.83.0",
-    "@aws-cdk/aws-route53": "^1.83.0",
-    "@aws-cdk/aws-sns": "^1.83.0",
-    "@aws-cdk/core": "^1.83.0",
-    "@aws-cdk/custom-resources": "^1.83.0"
+    "@aws-cdk/aws-iam": "1.84.0",
+    "@aws-cdk/aws-route53": "1.84.0",
+    "@aws-cdk/aws-sns": "1.84.0",
+    "@aws-cdk/core": "1.84.0",
+    "@aws-cdk/custom-resources": "1.84.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.83.0",
-    "@aws-cdk/aws-route53": "^1.83.0",
-    "@aws-cdk/aws-sns": "^1.83.0",
-    "@aws-cdk/core": "^1.83.0",
-    "@aws-cdk/custom-resources": "^1.83.0"
+    "@aws-cdk/aws-iam": "1.84.0",
+    "@aws-cdk/aws-route53": "1.84.0",
+    "@aws-cdk/aws-sns": "1.84.0",
+    "@aws-cdk/core": "1.84.0",
+    "@aws-cdk/custom-resources": "1.84.0"
   },
   "jest": {
     "moduleFileExtensions": [
