--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
     "@aws-cdk/core": "1.85.0",
     "@aws-cdk/custom-resources": "1.85.0"
   },
+  "dependencies": {
+    "@aws-cdk/aws-iam": "1.85.0",
+    "@aws-cdk/aws-route53": "1.85.0",
+    "@aws-cdk/aws-sns": "1.85.0",
+    "@aws-cdk/core": "1.85.0",
+    "@aws-cdk/custom-resources": "1.85.0"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js"
