Remove anti tamper

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -68,7 +68,7 @@
           "spawn": "test:compile"
         },
         {
-          "exec": "jest --passWithNoTests --all --updateSnapshot"
+          "exec": "jest --passWithNoTests --all"
         },
         {
           "spawn": "eslint"
