--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ yarn-error.log*
 !/.eslintrc.json
 !/.github/dependabot.yml
 !/.github/pull_request_template.md
+!/.github/workflows/automerge.yml
 !/.github/workflows/build.yml
 !/.github/workflows/rebuild-bot.yml
 !/.github/workflows/release.yml
