--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -22,3 +22,4 @@ jobs:
           MERGE_LABELS: dependencies,!wip,!work in progress
           MERGE_FILTER_AUTHOR: dependabot[bot]
           MERGE_DELETE_BRANCH: "true"
+          MERGE_RETRY_SLEEP: "60000"
