--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.91.0",
+    "@aws-cdk/assert": "^1.91.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^10.17.0",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -45,27 +45,27 @@
     "jsii-docgen": "^1.8.36",
     "jsii-pacmak": "^1.20.1",
     "json-schema": "^0.3.0",
-    "projen": "^0.16.3",
-    "standard-version": "^9.0.0",
+    "projen": "^0.16.38",
+    "standard-version": "^9",
     "ts-jest": "^26.5.0",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "1.91.0",
-    "@aws-cdk/aws-route53": "1.91.0",
-    "@aws-cdk/aws-sns": "1.91.0",
-    "@aws-cdk/core": "1.91.0",
-    "@aws-cdk/custom-resources": "1.91.0",
-    "@aws-cdk/cx-api": "1.91.0",
+    "@aws-cdk/aws-iam": "^1.91.0",
+    "@aws-cdk/aws-route53": "^1.91.0",
+    "@aws-cdk/aws-sns": "^1.91.0",
+    "@aws-cdk/core": "^1.91.0",
+    "@aws-cdk/custom-resources": "^1.91.0",
+    "@aws-cdk/cx-api": "^1.91.0",
     "constructs": "^3.2.27"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "1.91.0",
-    "@aws-cdk/aws-route53": "1.91.0",
-    "@aws-cdk/aws-sns": "1.91.0",
-    "@aws-cdk/core": "1.91.0",
-    "@aws-cdk/custom-resources": "1.91.0",
-    "@aws-cdk/cx-api": "1.91.0"
+    "@aws-cdk/aws-iam": "^1.91.0",
+    "@aws-cdk/aws-route53": "^1.91.0",
+    "@aws-cdk/aws-sns": "^1.91.0",
+    "@aws-cdk/core": "^1.91.0",
+    "@aws-cdk/custom-resources": "^1.91.0",
+    "@aws-cdk/cx-api": "^1.91.0"
   },
   "bundledDependencies": [],
   "keywords": [
