--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --check-files --frozen-lockfile
       - name: Synthesize project files
         run: npx projen
       - name: Set git identity
