--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,7 +12,10 @@ on:
       - completed
 jobs:
   automerge:
-    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+      checks: write
+      contents: write
     steps:
       - uses: actions/checkout@v2
       - name: automerge
