feat!: upgrade to cdk v2
fixes https://github.com/seeebiii/ses-verify-identities/issues/503

BREAKING CHANGE: run yarn install && npx projen@latest
* **cdk:** upgrade to ^2.1.0
* **projen:** upgrade to ^0.52.7
* **assertions:** replacing assert

--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -12,6 +12,7 @@ on:
       - completed
 jobs:
   automerge:
+    runs-on: ubuntu-latest
     permissions:
       pull-requests: write
       checks: write
