--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !/.gitattributes
 !/.projen/tasks.json
 !/.projen/deps.json
+!/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
 !/.github/workflows/stale.yml
 !/package.json
@@ -38,6 +39,7 @@ junit.xml
 !/.github/workflows/build.yml
 /dist/changelog.md
 /dist/version.txt
+!/.github/workflows/release.yml
 !/.mergify.yml
 !/.github/pull_request_template.md
 !/test/
@@ -50,5 +52,4 @@ junit.xml
 tsconfig.json
 !/API.md
 !/.github/workflows/automerge.yml
-!/.github/workflows/release.yml
 !/.github/workflows/upgrade-main.yml
