--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "compile": "npx projen compile",
     "default": "npx projen default",
     "docgen": "npx projen docgen",
+    "eject": "npx projen eject",
     "eslint": "npx projen eslint",
     "package": "npx projen package",
+    "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
+    "package:java": "npx projen package:java",
+    "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
-    "publish:github": "npx projen publish:github",
-    "publish:maven": "npx projen publish:maven",
-    "publish:npm": "npx projen publish:npm",
-    "publish:nuget": "npx projen publish:nuget",
-    "publish:pypi": "npx projen publish:pypi",
     "release": "npx projen release",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
@@ -37,46 +39,32 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.133.0",
     "@types/jest": "^26.0.24",
-    "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@types/node": "^12",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk-lib": "2.1.0",
+    "constructs": "10.0.5",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "jest": "^26.6.3",
-    "jest-junit": "^12",
+    "jest-junit": "^13",
     "jsii": "^1.45.0",
     "jsii-diff": "^1.45.0",
     "jsii-docgen": "^1.8.110",
-    "jsii-pacmak": "^1.45.0",
     "json-schema": "^0.4.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.34.12",
+    "npm-check-updates": "^12",
+    "projen": "^0.52.7",
     "standard-version": "^9",
     "ts-jest": "^26.5.6",
     "typescript": "^3.9.10"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-iam": "^1.133.0",
-    "@aws-cdk/aws-route53": "^1.133.0",
-    "@aws-cdk/aws-sns": "^1.133.0",
-    "@aws-cdk/core": "^1.133.0",
-    "@aws-cdk/custom-resources": "^1.133.0",
-    "@aws-cdk/cx-api": "^1.133.0",
-    "constructs": "^3.2.27"
+    "aws-cdk-lib": "^2.1.0",
+    "constructs": "^10.0.5"
   },
-  "dependencies": {
-    "@aws-cdk/aws-iam": "^1.133.0",
-    "@aws-cdk/aws-route53": "^1.133.0",
-    "@aws-cdk/aws-sns": "^1.133.0",
-    "@aws-cdk/core": "^1.133.0",
-    "@aws-cdk/custom-resources": "^1.133.0",
-    "@aws-cdk/cx-api": "^1.133.0"
-  },
-  "bundledDependencies": [],
   "keywords": [
     "SES identities",
     "SES verification",
@@ -98,8 +86,8 @@
       "<rootDir>/test"
     ],
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -107,6 +95,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
